--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html style="width: 100%; height: 100%;">
     <head>
@@ -32,7 +31,8 @@
                     "@react-spring/": "https://esm.sh/react-spring@9.7.3&dev&external=react/",
                     "react/": "https://esm.sh/react@18.3.1&dev/",
                     "three": "https://esm.sh/three@0.161.0?dev",
-                    "three/": "https://esm.sh/three@0.161.0&dev/"
+                    "three/": "https://esm.sh/three@0.161.0&dev/",
+                    "@supabase/supabase-js": "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm"
                 }
             }
         </script>
